[gd_scene load_steps=2 format=3 uid="uid://c6kcrn1e865om"]

[ext_resource type="Script" path="res://main.gd" id="1_frw3b"]

[node name="Main" type="Node2D"]
script = ExtResource("1_frw3b")

[node name="inputText" type="TextEdit" parent="."]
unique_name_in_owner = true
offset_left = 50.0
offset_top = 53.0
offset_right = 280.0
offset_bottom = 92.0
placeholder_text = "Digite o novo n√≥: "

[node name="Button" type="Button" parent="."]
offset_left = 51.0
offset_top = 105.0
offset_right = 97.0
offset_bottom = 136.0
text = "Criar"

[node name="raizPos" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(744, 77)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
